# pydency

./: README.md  pyproject.toml
src/: config_api.py  dependency_getter.py  pydency
src/pydency/: __init__.py  __main__.py  config_api.py  dependency_getter.py  error_types.py
test_app/: base.py
test_app/level1/: level_1.py
test_app/level1/level2/: level_21.py  level_22.py  level_23.py
tests/: test_dependency_getter.py
